Version 0.1  20080311
~~~~~~~~~~~
Initial version

Version 0.2  20080518
~~~~~~~~~~~
Add XML parsing routines
More structured document types
Add generic document union and associated processing
NRAO-DiFX version 1.1

Version 0.3  20080715
~~~~~~~~~~~
New branch version post version 1.1
Add table (enum) of error levels
Rename ERROR to ALERT
Binary message sending, intended for Short Term Accumations (STAs)