@@ -1,5 +1,16 @@
 #!/bin/env python
 
+#===========================================================================
+# SVN properties (DO NOT CHANGE)
+#
+# $Id$
+# $HeadURL: $
+# $LastChangedRevision$
+# $Author$
+# $LastChangedDate$
+#
+#============================================================================
+
 from string import split, strip, find, upper, lower
 from sys import argv, exit
 from os import popen, getenv
@@ -156,7 +167,7 @@ class Display:
 				i += 1
 			self.displayall()
 
-def listen():
+def listen(port, group):
 	dt = 0.0
 	t = 0
 	maxtime = 6000
@@ -164,8 +175,8 @@ def listen():
 	# Now listen for responses, until either time runs out or we get all we need
 	s = socket.socket(socket.AF_INET, socket.SOCK_DGRAM)
 	s.setsockopt(socket.SOL_SOCKET, socket.SO_REUSEADDR, 1)
-	s.bind(('', 50200))
-	mreq = struct.pack("4sl", socket.inet_aton("224.2.2.1"), socket.INADDR_ANY)
+	s.bind(('', port))
+	mreq = struct.pack("4sl", socket.inet_aton(group), socket.INADDR_ANY)
 	s.setsockopt(socket.IPPROTO_IP, socket.IP_ADD_MEMBERSHIP, mreq)
 	s.settimeout(0.2)
 	d = Display()
@@ -214,4 +225,16 @@ def readmachines(machinesfile, verbose):
 
 	return machines,cores,ismk5
 
-listen()
+
+port = getenv('DIFX_MESSAGE_PORT')
+if port == None:
+	print 'DIFX_MESSAGE_PORT needs to be defined'
+	exit(0)
+else:
+	port = int(port)
+group = getenv('DIFX_MESSAGE_GROUP')
+if group == None:
+	print 'DIFX_MESSAGE_GROUP needs to be defined'
+	exit(0)
+
+listen(port, group)
