@@ -15,3 +15,4 @@ New branch version post version 1.1
 Add table (enum) of error levels
 Rename ERROR to ALERT
 Binary message sending, intended for Short Term Accumations (STAs)
+Don't assume default PORT and GROUP
